static/css/base.css
/*-------------------------------------------Imported Google Fonts*/

@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');

/*-------------------------------------------Global Font-Size set to 10px*/


/*-------------------------------------------General*/
html {
    height: 100%;
}

body {
    background: url('/media/hero-image.png') no-repeat center center fixed;
    background-size: cover;
    height: calc(100vh - 164px);
    font-family: 'Montserrat', sans-serif;
    margin: 0 auto;
    padding: 0;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
}

.container-pd {
    padding-bottom: 6rem;
    margin-bottom: auto;
}

main {
    flex: 1 0 auto;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Montserrat', sans-serif;
    color: #000000;
}

h1 {
    font-size: 3rem;
}

h2 {
    font-size: 2rem;
}

h3 {
    font-size: 1.5rem;
}

h4 {
    font-size: 1.25rem;
}

p {
    font-size: 1rem;
}

.heading-font {
    text-transform: uppercase;
}

.header-font {
    text-transform: uppercase;
}

p {
    font-size: 1rem;
}

/*-------------------------------------------Colors*/

.bg-white {
    background-color: #fafafa;
}

.bg-blue {
    background-color: #0b2f47;
}

.bg-lblue {
    background-color: #38b6ff
}

.text-white {
    color: rgb(255, 255, 255)
}

.text-blue {
    color: #0b2f47
}

.btn-blue {
    background: #0b2f47;
    color: white;
}

.text-black {
    color: #000 !important;
}

.table-sm td,
.table-sm th {
    padding: 0;
}

/*-------------------------------------------Buttons*/

.btn {
    color: white;
    background-color: #0b2f47;
    border-radius: .25rem;
}

.btn:hover {
    background-color: rgb(0, 0, 0);
    color: white;
}

.btn-shop-now {
    background: #0b2f47;
    color: white;
    min-width: 13rem;
}

/*-------------------------------------------CSS used from Ado Boutique Project*/

.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

.main-logo-link {
    width: fit-content;
}

.btn-outline {
    background: #0b2f47;
    color: white !important;
}

.border-black {
    border: 1px solid black !important;
}

.overlay {
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    position: fixed;
    background: #ffffff;
    z-index: -1;
}

a.category-badge>span.badge:hover {
    background: #212529 !important;
    color: #fff !important;
}

.btt-button {
    height: 42px;
    width: 42px;
    position: fixed;
    bottom: 10px;
    right: 10px;
}

.btt-link,
.update-link,
.remove-item {
    cursor: pointer;
}

.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 99999999999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}

.arrow-up {
    width: 0;
    height: 0;
    border-left: 4px solid transparent;
    border-right: 4px solid transparent;
    border-bottom: 10px solid black;
    position: absolute;
    top: -10px;
    right: 36px;
}

.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

.bag-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

/* Allauth form formatting */

.allauth-form-inner-content p {
    margin-top: 1.5rem;
    /* mt-4 */
    color: #b6c2ce;
    /* text-secondary */
}

.allauth-form-inner-content input {
    border-color: #000;
    border-radius: 0;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #b6c2ce;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
    /* btn */
    display: inline-block;
    font-weight: 400;
    color: #fff;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: #0b2f47;
    border: 1px solid #0b2f47;
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 0;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {
    color: #fff;
    background-color: rgb(0, 0, 0);
    border-color: rgb(0, 0, 0);
}

.allauth-form-inner-content a {
    color: #17a2b8;
    /* text-info */
}

/* Product Form */

.btn btn-file {
    position: relative;
    overflow: hidden;
    background-color: white;
    border: black;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: #dc3545;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: #dc3545;
    border-color: #dc3545;
    border-radius: 0;
}

/* Product Form */

ul.social-links {
    padding-left: 0;
}

/* -------------------------------- Media Queries */


/* fixed top navbar only on medium and up */
@media (min-width: 992px) {
    .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }

    .header-container {
        padding-top: 10rem;
    }
}

/* pad the top a bit when navbar is collapsed on mobile */
@media (max-width: 991px) {
    .header-container {
        padding-top: 116px;
    }

    body {
        height: calc(100vh - 116px);
    }

    .display-4.heading-font.text-black {
        font-size: 2rem;
    }

    .heading-font {
        padding-top: .25rem;
    }

    .navbar {
        padding-top: 0.25rem;
    }

    .h2 {
        text-align: center;
    }

    .nav-link {
        padding: 0;
    }

    .header-font {
        text-align: center;
    }

    .nav-link i.fa-lg {
        font-size: 1rem;
    }

    .navbar-toggler {
        padding: .6rem .6rem;
        font-size: 1rem;
    }

    .list-inline-item {
        margin-right: .25rem;
    }

    #delivery-banner h4 {
        font-size: .9rem;
    }

    .btn.btn-outline.rounded-0,
    .btn.btn-black.rounded-0 {
        padding: .375rem .375rem;
    }

    .btn.btn-outline.rounded-0.btn-lg,
    .btn.btn-black.rounded-0.btn-lg {
        padding: .375rem .375rem;
        font-size: .85rem;
    }

    .increment-qty, .decrement-qty {
        padding: .25rem .5rem !important;
    }

}

